--- a/index.html
+++ b/index.html
@@ -7,6 +7,61 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <!--cap-->
+    <header>
+        <nav>
+            <a href="/">Web Studio</a>
+            <ul>
+                <li><a href="">Studio</a></li>
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Contacts</a></li>
+            </ul>
+        </nav>
+        <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+    </header>
+
+    <main>
+        <!--hero-->
+        <section>
+            <h1>Effective Solutions for Your Business</h1>
+            <button type="button">Order Service</button>
+        </section>
+
+        <!--description-->
+        <section>
+            <h2>Description</h2>
+            <ul>
+                <li>
+                    <h3>Strategy</h3>
+                    <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+                </li>
+                <li>
+                    <h3>Punctuality</h3>
+                    <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+                </li>
+                <li>
+                    <h3>Diligence</h3>
+                    <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+                </li>
+                <li>
+                    <h3>Technologies</h3>
+                    <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+                </li>
+            </ul>
+        </section>
+
+        <!--What are we doing-->
+        <section>
+            <h2>What are we doing</h2>
+            <ul>
+                <li></li>
+            </ul>
+        </section>
+    </main>
+
 </body>
 </html>
