wat are we doing

--- a/index.html
+++ b/index.html
@@ -58,7 +58,21 @@
         <section>
             <h2>What are we doing</h2>
             <ul>
-                <li></li>
+                <li>
+                    <a href="">
+                        <img src="./images/img.jpg" alt="monitor" width="360" height="300" />
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/img1.jpg" alt="phone" width="360" height="300" />
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/img2.jpg" alt="laptop" width="360" height="300" />
+                    </a>
+                </li>
             </ul>
         </section>
     </main>
