--- a/index.html
+++ b/index.html
@@ -75,6 +75,41 @@
                 </li>
             </ul>
         </section>
+
+        <!--Our Team-->
+        <section>
+            <h2>Our Team</h2>
+            <ul>
+                <li>
+                    <a href="">
+                        <img src="./images/photo1.jpg" alt="mark" width="264" height="260" />
+                        <h3>Mark Guerrero</h3>
+                        <p>Product Designer</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/photo2.jpg" alt="tom" width="264" height="260" />
+                        <h3>Tom Ford</h3>
+                        <p>Frontend Developer</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/photo3.jpg" alt="camila" width="264" height="260" />
+                        <h3>Camila Garcia</h3>
+                        <p>Marketing</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <img src="./images/photo4.jpg" alt="daniel" width="264" height="260" />
+                        <h3>Daniel Wilson</h3>
+                        <p>UI Designer</p>
+                    </a>
+                </li>
+            </ul>
+        </section>
     </main>
 
 </body>
