--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
             </ul>
         </section>
     </main>
+    <footer>
+        <section>
+            <a href="">Web Studio</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </section>
+    </footer>
 
 </body>
 </html>
