--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>[1.1] HTML Lesson_Module 1</title>
 </head>
 <body>
 
     <!--cap-->
     <header>
         <nav>
-            <a href="/">Web Studio</a>
+            <a href="">Web Studio</a>
             <ul>
                 <li><a href="">Studio</a></li>
                 <li><a href="">Portfolio</a></li>
@@ -60,17 +60,17 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/img.jpg" alt="monitor" width="360" height="300" />
+                        <img src="./images/img.jpg" alt="monitor" width="360" height="300" >
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/img1.jpg" alt="phone" width="360" height="300" />
+                        <img src="./images/img1.jpg" alt="phone" width="360" height="300" >
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/img2.jpg" alt="laptop" width="360" height="300" />
+                        <img src="./images/img2.jpg" alt="laptop" width="360" height="300" >
                     </a>
                 </li>
             </ul>
@@ -82,28 +82,28 @@
             <ul>
                 <li>
                     <a href="">
-                        <img src="./images/photo1.jpg" alt="mark" width="264" height="260" />
+                        <img src="./images/photo1.jpg" alt="mark" width="264" height="260" >
                         <h3>Mark Guerrero</h3>
                         <p>Product Designer</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/photo2.jpg" alt="tom" width="264" height="260" />
+                        <img src="./images/photo2.jpg" alt="tom" width="264" height="260" >
                         <h3>Tom Ford</h3>
                         <p>Frontend Developer</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/photo3.jpg" alt="camila" width="264" height="260" />
+                        <img src="./images/photo3.jpg" alt="camila" width="264" height="260" >
                         <h3>Camila Garcia</h3>
                         <p>Marketing</p>
                     </a>
                 </li>
                 <li>
                     <a href="">
-                        <img src="./images/photo4.jpg" alt="daniel" width="264" height="260" />
+                        <img src="./images/photo4.jpg" alt="daniel" width="264" height="260" >
                         <h3>Daniel Wilson</h3>
                         <p>UI Designer</p>
                     </a>
@@ -112,10 +112,8 @@
         </section>
     </main>
     <footer>
-        <section>
-            <a href="">Web Studio</a>
-            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-        </section>
+        <a href="">Web Studio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 
 </body>
